# Knowledge-Base

./: .dockerignore  .gitignore  .knowledge-config.yaml  .knowledge-governance-state.json  Dockerfile  README.md  knowledge-catalog.md  log.md  pyproject.toml  start.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: knowledge-lint.yml
backend/: .gitignore  Dockerfile  README.md  __init__.py  main.py  requirements-dev.txt  requirements.txt
backend/config/: app.yaml  config.py
backend/constant/: __init__.py  enums.py  values.py
backend/controller/: __init__.py  business_domain_api.py  health_api.py  identity_api.py  knowledge_api.py  member_api.py  super_admin_api.py
backend/database/: __init__.py  lifecycle.py  models.py  session.py
backend/domain/: __init__.py  models.py  req.py  res.py
evidence/: TK-GDL-001.yaml  TK-GDL-002.yaml
policies/: maturity-policy.yaml  retention-policy.yaml  review-policy.yaml  risk-policy.yaml
project-profiles/: Knowledge-Base.yaml
reports/: review-due.md
schemas/: evidence.schema.json  knowledge.schema.json  policy.schema.json  project-profile.schema.json
team-conventions/: catalog.md  coding-standards.md  commit-conventions.md  review-standards.md
tech-wiki/: catalog.md
templates/: decision.md  guideline.md  model.md  personal-preferences.example.yaml  pitfall.md  process.md  project-profile.example.yaml
tests/: test_evidence.py  test_knowledge_governance.py  test_lifecycle.py  test_preferences.py  test_repository.py  test_web_api.py
tools/: knowledge_governance.py
(+140 files in other folders)
