[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-governance"
version = "0.1.0"
description = "Git-native knowledge governance tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "dynaconf>=3.2,<4",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "jsonschema>=4.18,<5",
  "pydantic>=2.8,<3",
  "PyYAML>=6,<7",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = ["httpx2>=2,<3", "pytest>=7.4,<9"]

[project.scripts]
knowledge = "knowledge_governance.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
knowledge_governance = ["web/config/*.yaml", "web/templates/*.html", "web/static/*.css", "web/static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
